processor/src/test/resources/errors/NonActivity.java
package errors;

import com.kboyarshinov.activityscreens.annotation.ActivityScreen;

@ActivityScreen
public class NonActivity {
}